# lab4_sem3_dange_walker

./: .gitignore  CMakeLists.txt  README.md  plans.txt
src/: .gitignore  CMakeLists.txt  Container.hpp  Door.hpp  Doxyfile  Effect.hpp  Floor.hpp  GameWorld.hpp  Map.cpp  Map.hpp  Object.cpp  Object.hpp  Object_old.hpp  TextureStore.hpp  Wall.hpp  World.cpp  World.hpp  World_old.hpp  all_headers.hpp  backpack_menu.cpp  backpack_menu.hpp  boot_menu.cpp  boot_menu.hpp  constants.hpp  game.cpp  game.hpp  interraction.cpp  interraction.hpp  main.cpp  menu.cpp  menu.hpp  world.hpp
src/alive_obj/: Alive.cpp  Alive.hpp  CMakeLists.txt  Character.cpp  Character.hpp  NPC.hpp  Sidorovich.cpp  Sidorovich.hpp  Skeleton.cpp  Skeleton.hpp  Slime.cpp  Slime.hpp  Trader.hpp  alive.hpp
src/alive_obj/dialog/: CMakeLists.txt  DialogTree.cpp  DialogTree.hpp
src/alive_obj/quest/: CMakeLists.txt  Quest.cpp  Quest.hpp  QuestKiller.cpp  QuestKiller.hpp  quest.hpp
src/backpack_menu/: BPMObject.hpp  BackPackMenu.cpp  BackPackMenu.hpp  BackPackStore.hpp  CMakeLists.txt  CharBar.hpp  Label.hpp  MenuObj.hpp  MenuWorld.hpp  Skin.hpp  StatusBar.hpp  WeaponInArm.hpp  World_func_spec.cpp  backpack_menu.cpp  backpack_menu.hpp  draw_backpack_menu.cpp  draw_backpack_menu.hpp
src/containers/: BackPack.cpp  BackPack.hpp  Box.cpp  Box.hpp  Chest.cpp  Chest.hpp  Container.hpp
src/docs/: Doxyfile.in
src/draw/: Draw.cpp  Draw.hpp
src/enums/: Complexity.hpp  Keys.hpp  Money.hpp
src/environment/: CMakeLists.txt  Door.cpp  Door.hpp  Env.cpp  Env.hpp  Floor.cpp  Floor.hpp  Wall.cpp  Wall.hpp  environment.hpp
src/events/: CMakeLists.txt  Event.cpp  Event.hpp  EventType.hpp  Kill.cpp  Kill.hpp  event.hpp
src/game/: CMakeLists.txt  game.cpp
src/general_classes/: CMakeLists.txt
src/loot/: CMakeLists.txt  Coin.hpp  Coins.cpp  Loot.hpp  Money.cpp  Money.hpp  Weapon.hpp
src/menu/: CMakeLists.txt  menu.cpp  menu.hpp
src/message_menu/: CMakeLists.txt  Message.cpp  message.hpp  sfml_message_window.hpp
src/my_stl_containers/: .gitignore  CMakeLists.txt  Doxyfile  vector.cpp  vector.hpp
src/my_stl_containers/doc/: CMakeLists.txt  Doxyfile.in
src/my_stl_containers/docs/: Doxyfile.in
src/my_stl_containers/include/: vector.hpp
src/my_stl_containers/src/: .gitignore  CMakeLists.txt
src/my_stl_containers/src/src/: Makefile
src/my_stl_containers/src/src/tests/: Makefile
src/my_stl_containers/src/src/vector/: Makefile
src/my_stl_containers/src/tests/: CMakeLists.txt  vector_tests.cpp
src/my_stl_containers/src/vector/: CMakeLists.txt  vector.cpp
src/my_stl_containers/tests/: CMakeLists.txt  vector_tests.cpp
src/my_stl_containers/vector/: CMakeLists.txt  vector.hpp
src/objects/: BPMObject.hpp  GameObject.hpp  Object.cpp  Object.hpp
src/physics/: Collider.hpp  Hitbox.cpp  Hitbox.hpp
src/quest/: CMakeLists.txt  Quest.hpp
src/sfml_classes/: CMakeLists.txt  sfml_common.hpp  sfml_message_window.hpp  sfml_object.hpp  sfml_sound.hpp
src/static/: backpack_menu.txt  bp_menu.txt  bp_menu_textures.txt  containers.txt  effects_src.txt  first_room.txt  game_obj_src.txt  hero.txt  npc.txt
src/static/logs/: bp_menu_textures.txt  dialogs.txt  effects_src.txt  first_room.txt  game_obj_src.txt  npc.txt
src/static/logs/dialogs/: Sidorovich_dialog.ini
src/texture_engine/: CMakeLists.txt
src/texture_engine/include/: Series.hpp  State.hpp
src/texture_engine/src/: CMakeLists.txt  Series.cpp  State.cpp
src/weapon/: Knife.hpp  MeleeWeapon.hpp  MeleeWeaponWave.hpp  Sward.cpp  Sward.hpp  Weapon.hpp  weapon.hpp
test/: CMakeLists.txt  main_test.cpp
test/lib/googletest-main/googletest-main/docs/: advanced.md  gmock_cook_book.md
test/lib/googletest-main/googletest-main/docs/reference/: actions.md  matchers.md  testing.md
test/lib/googletest-main/googletest-main/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h
test/lib/googletest-main/googletest-main/googlemock/include/gmock/internal/: gmock-internal-utils.h
test/lib/googletest-main/googletest-main/googletest/include/gtest/: gtest-param-test.h  gtest-printers.h  gtest-test-part.h
test/lib/googletest-main/googletest-main/googletest/include/gtest/internal/: gtest-internal.h
test/lib/googletest-main/googletest-main/googletest/src/: gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest.cc
